# EngineAI-Mujoco-Standalone

./: .gitignore  CMakeLists.txt  README.md  env.sh  new_build.sh  run.sh
assets/config/pm01_edu/rl_dance_example/: default.yaml
assets/config/pm01_edu/task_motion/: default.yaml
assets/config/t800/google_logger/: default.yaml
assets/config/t800/model/: default.yaml
assets/config/t800/motor/: default.yaml
assets/config/t800/parallel_ankle/: default.yaml  symmetry.yaml
assets/config/t800/passive/: default.yaml
assets/config/t800/pd_stand/: default.yaml  robot.yaml
assets/config/t800/rl_dance_example/: default.yaml
assets/config/t800/rl_dance_example/policies/: policy.mnn
assets/config/t800/rl_walking_example/: default.yaml
assets/config/t800/rl_walking_example/policies/: 251111_180036_saw_50k.mnn
assets/config/t800/task_motion/: default.yaml
assets/config/t800/task_resident/: sim.yaml
assets/resource/robot/pm01_edu/xml/: serial_pm01_edu.xml
assets/resource/robot/t800/urdf/: serial_t800.urdf
cmake/: Crashpad.cmake  Findlcm.cmake
policy_convert/: onnx_convert_to_mnn.py
policy_convert/config/minic_motion_data/: play.npz
policy_convert/config/policy/minic/: play.onnx  play.pt
policy_convert/t800/: dance1_subject1.mnn  policy.onnx
scripts/: build_compat_vendor_deps.sh  build_mujoco.sh  build_vendor_fmt.sh  build_vendor_glog.sh  process_dump.sh  run_mujoco.sh
simulation/mujoco/: CMakeLists.txt
simulation/mujoco/simulate/: CMakeLists.txt
simulation/mujoco/simulate/cmake/: FindOrFetch.cmake
src/data/_param/rl_dance_example_param/: rl_dance_example_param.h
src/executor/: CMakeLists.txt  main.cc
src/runner/rl_dance_example/src/: rl_dance_example_runner.cc  wbt_obs_registry.cc
tools/virtual_gamepad/: README.md
